WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228939
[macOS] REGRESSION(
r278850
): modifying `playbackRate` via JS on a TouchBar mac only sometimes works and also causes the `defaultPlaybackRate` to change
https://bugs.webkit.org/show_bug.cgi?id=228939
Summary
[macOS] REGRESSION(r278850): modifying `playbackRate` via JS on a TouchBar ma...
Devin Rousso
Reported
2021-08-09 19:20:57 PDT
.
Attachments
Patch
(13.66 KB, patch)
2021-08-09 19:32 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-08-09 19:21:23 PDT
<
rdar://problem/80427578
>
Devin Rousso
Comment 2
2021-08-09 19:32:37 PDT
Created
attachment 435234
[details]
Patch
Eric Carlson
Comment 3
2021-08-09 19:55:17 PDT
Comment on
attachment 435234
[details]
Patch r=me once the bots are happy
EWS
Comment 4
2021-08-10 07:31:58 PDT
Committed
r280840
(
240391@main
): <
https://commits.webkit.org/240391@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435234
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug