Source/WebCore/platform/mac/WebPlaybackControlsManager.mm
@@ -336,18 +336,23 @@ static RetainPtr<NSArray> mediaSelectionOptions(const Vector<MediaSelectionOptio
 
 - (void)setDefaultPlaybackRate:(double)defaultPlaybackRate
 {
+    [self setDefaultPlaybackRate:defaultPlaybackRate fromJavaScript:NO];
+}
+
+- (void)setDefaultPlaybackRate:(double)defaultPlaybackRate fromJavaScript:(BOOL)fromJavaScript
+{
     if (defaultPlaybackRate == _defaultPlaybackRate)
         return;
 
     _defaultPlaybackRate = defaultPlaybackRate;
 
-    if (_playbackSessionInterfaceMac) {
+    if (!fromJavaScript && _playbackSessionInterfaceMac) {
         if (auto* model = _playbackSessionInterfaceMac->playbackSessionModel(); model && model->defaultPlaybackRate() != _defaultPlaybackRate)
             model->setDefaultPlaybackRate(_defaultPlaybackRate);
     }
 
     if ([self isPlaying])
-        [self setRate:_defaultPlaybackRate];
+        [self setRate:_defaultPlaybackRate fromJavaScript:fromJavaScript];
 }
 
 - (float)rate
@@ -356,6 +361,11 @@ static RetainPtr<NSArray> mediaSelectionOptions(const Vector<MediaSelectionOptio
 }
 
 - (void)setRate:(float)rate
+{
+    [self setRate:rate fromJavaScript:NO];
+}
+
+- (void)setRate:(double)rate fromJavaScript:(BOOL)fromJavaScript
 {
     if (rate == _rate)
         return;
@@ -374,9 +384,9 @@ static RetainPtr<NSArray> mediaSelectionOptions(const Vector<MediaSelectionOptio
     // ending scanning, with the `playbackRate` being used in all other cases, including when
     // resuming after pausing. As such, WebKit should return the `playbackRate` instead of the
     // `defaultPlaybackRate` in these cases when communicating with AVKit.
-    [self setDefaultPlaybackRate:_rate];
+    [self setDefaultPlaybackRate:_rate fromJavaScript:fromJavaScript];
 
-    if (_playbackSessionInterfaceMac) {
+    if (!fromJavaScript && _playbackSessionInterfaceMac) {
         if (auto* model = _playbackSessionInterfaceMac->playbackSessionModel(); model && model->playbackRate() != _rate)
             model->setPlaybackRate(_rate);
     }
