Tools/TestWebKitAPI/Tests/WebKitCocoa/VideoControlsManager.mm
@@ -28,6 +28,7 @@
 #import "PlatformUtilities.h"
 #import "TestWKWebView.h"
 #import <WebKit/WKWebViewConfigurationPrivate.h>
+#import <WebKit/WKWebViewPrivate.h>
 #import <WebKit/WKWebViewPrivateForTesting.h>
 #import <wtf/RetainPtr.h>
 
@@ -462,6 +463,25 @@ TEST(VideoControlsManager, VideoControlsManagerPageWithEnormousVideo)
 
     [webView loadTestPageNamed:@"enormous-video-with-sound"];
     [webView expectControlsManager:NO afterReceivingMessage:@"playing"];
+}
+
+TEST(VideoControlsManager, VideoControlsManagerDoesNotChangeValuesExposedToJavaScript)
+{
+    RetainPtr<VideoControlsManagerTestWebView> webView = setUpWebViewForTestingVideoControlsManager(NSMakeRect(0, 0, 500, 500));
+
+    // A large video with audio should have a controls manager even if it is played via script like this video.
+    // So the expectation is YES.
+    [webView loadTestPageNamed:@"large-video-with-audio"];
+    [webView waitForMediaControlsToShow];
+    [webView _updateMediaPlaybackControlsManager];
+
+    EXPECT_EQ(1.0, [[webView objectByEvaluatingJavaScript:@"document.getElementsByTagName('video')[0].playbackRate"] doubleValue]);
+    EXPECT_EQ(1.0, [[webView objectByEvaluatingJavaScript:@"document.getElementsByTagName('video')[0].defaultPlaybackRate"] doubleValue]);
+
+    [webView objectByEvaluatingJavaScript:@"document.getElementsByTagName('video')[0].playbackRate = 2.0;"];
+
+    EXPECT_EQ(2.0, [[webView objectByEvaluatingJavaScript:@"document.getElementsByTagName('video')[0].playbackRate"] doubleValue]);
+    EXPECT_EQ(1.0, [[webView objectByEvaluatingJavaScript:@"document.getElementsByTagName('video')[0].defaultPlaybackRate"] doubleValue]);
 }
 
 } // namespace TestWebKitAPI
